--- a/index.html
+++ b/index.html
@@ -25,6 +25,30 @@
 
 <body>
 
+	<div class="mobile-menu">
+		<div class="mobile-menu__close"></div>
+		<a href="index.html" class="logo"><img src="img/logo.svg" alt=""></a>
+
+		<ul class="menu my-ul">
+			<li><a href="#section1" class="go_to">section1</a></li>
+			<li><a href="#section2" class="go_to">section2</a></li>
+			<li><a href="#section3" class="go_to">section3</a></li>
+			<li><a href="#section4" class="go_to">section4</a></li>
+			<li><a href="#section5" class="go_to">section5</a></li>
+			<li><a href="#section6" class="go_to">section6</a></li>
+			<li><a href="#section7" class="go_to">section7</a></li>
+		</ul>
+
+		<div class="header-contacts">
+			<a href="whatsapp://send?phone=+79379111234" class="messenger-link"><img src="img/whatsapp.svg" alt=""></a>
+			<a href="viber://chat?number=+79379111234" class="messenger-link"><img src="img/viber.svg" alt=""></a>
+			<a href="tel:+79379111234" class="phone">+7 937 911 1234</a>
+		</div>
+
+		<a href="#" class="btn btn-accent" data-bs-target="#callbackModal" data-bs-toggle="modal">обратный звонок</a>
+	</div>
+
+
 	<header>
 		<div class="container">
 			<div class="row">
@@ -157,12 +181,12 @@
 	<section class="advantages">
 		<div class="container">
 			<div class="row">
-				<div class="col-12 col-lg-5">
+				<div class="col-12 col-xxl-5">
 					<h2>Обладаем непревзойденной экспертизой</h2>
 					<div class="subtitle">в вопросах рулевого управления</div>
 				</div>
 
-				<div class="col-12 col-lg-7">
+				<div class="col-12 col-xxl-7">
 					<div class="advantages-wrapper">
 						<div class="advantages-col">
 							<div class="advantages-box">
@@ -199,7 +223,7 @@
 		</div>
 	</section>
 
-	<section class="technology">
+	<section class="technology" id="section1">
 		<div class="container">
 			<div class="row">
 				<div class="col-12 col-lg-7 order-lg-1">
@@ -245,7 +269,7 @@
 		</div>
 	</section>
 
-	<section class="possibilities">
+	<section class="possibilities" id="section2">
 		<div class="container">
 			<div class="row">
 				<div class="col-12 col-lg-6">
@@ -363,7 +387,7 @@
 		</div>
 	</section>
 
-	<section class="about">
+	<section class="about" id="section3">
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
@@ -458,7 +482,7 @@
 		</div>
 	</section>
 
-	<section class="benefit">
+	<section class="benefit" id="section4">
 		<div class="container">
 			<div class="row">
 				<div class="col-12 col-lg-6">
@@ -490,17 +514,7 @@
 	<div class="manufacturers">
 		<div class="container">
 			<div class="row align-items-center">
-				<div class="col-12 col-lg-6">
-					<div class="manufacturers-logos">
-						<div class="manufacturers-logos__item"><img src="img/manufacturer1.png" alt=""></div>
-						<div class="manufacturers-logos__item"><img src="img/manufacturer2.png" alt=""></div>
-						<div class="manufacturers-logos__item"><img src="img/manufacturer3.png" alt=""></div>
-						<div class="manufacturers-logos__item"><img src="img/manufacturer4.png" alt=""></div>
-						<div class="manufacturers-logos__item"><img src="img/manufacturer5.png" alt=""></div>
-						<div class="manufacturers-logos__item"><img src="img/manufacturer6.png" alt=""></div>
-					</div>
-				</div>
-				<div class="col-12 col-lg-6">
+				<div class="col-12 col-xxl-6 order-xxl-1">
 					<div class="manufacturers-wrapper">
 						<div class="manufacturers-box">
 							<h4 class="color-accent">Производители <br>сальников OEM:</h4>
@@ -520,20 +534,31 @@
 						</div>
 					</div>
 				</div>
+				<div class="col-12 col-xxl-6">
+					<div class="manufacturers-logos">
+						<div class="manufacturers-logos__item"><img src="img/manufacturer1.png" alt=""></div>
+						<div class="manufacturers-logos__item"><img src="img/manufacturer2.png" alt=""></div>
+						<div class="manufacturers-logos__item"><img src="img/manufacturer3.png" alt=""></div>
+						<div class="manufacturers-logos__item"><img src="img/manufacturer4.png" alt=""></div>
+						<div class="manufacturers-logos__item"><img src="img/manufacturer5.png" alt=""></div>
+						<div class="manufacturers-logos__item"><img src="img/manufacturer6.png" alt=""></div>
+					</div>
+				</div>
+				
 			</div>
 		</div>
 	</div>
 
-	<section class="reviews">
+	<section class="reviews" id="section5">
 		<div class="container">
 			<div class="row align-items-center">
-				<div class="col-12 col-lg-10">
+				<div class="col-12 col-xl-10">
 					<h2>
 						<span>95%</span>
 						клиентов довольны <br>нашими ремкомплектами
 					</h2>
 				</div>
-				<div class="col-12 col-lg-2">
+				<div class="col-12 col-xl-2">
 					<div class="slider-nav reviews-slider__nav"></div>
 				</div>
 			</div>
@@ -592,7 +617,7 @@
 		</div>
 	</section>
 
-	<section class="steering">
+	<section class="steering" id="section6">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-12 col-lg-10">
@@ -654,10 +679,10 @@
 	</section>
 
 
-	<section class="callback-sales">
+	<section class="callback-sales" id="section7">
 		<div class="container">
 			<div class="row">
-				<div class="col-12 col-lg-9">
+				<div class="col-12 col-xxl-9">
 					<h2><strong>Закажите ремкомплект</strong> рулевой рейки прямо сейчас, и мы доставим его
 						<strong>*бесплатно!</strong>
 					</h2>
@@ -736,7 +761,7 @@
 					</div>
 				</div>
 
-				<div class="col-12 col-lg-3">
+				<div class="col-12 col-xxl-3 d-none d-xxl-block">
 					<div class="callback-sales__img"><img src="img/men.png" alt=""></div>
 				</div>
 			</div>
@@ -749,7 +774,7 @@
 				<div class="col-12">
 					<div class="footer-top">
 						<div class="row">
-							<div class="col-12 col-lg-10 d-flex align-items-center flex-wrap">
+							<div class="col-12 col-xl-10 d-flex align-items-center flex-wrap">
 								<a href="index.html" class="logo"><img src="img/logo.svg" alt=""></a>
 								<div class="description-company">Ремкомплекты для рулевых реек с доставкой</div>
 
@@ -790,9 +815,9 @@
 									</a>
 								</div>
 
-								
+
 							</div>
-							<div class="col-12 col-lg-2">
+							<div class="col-12 col-xl-2">
 								<a href="#" class="link-map">
 									<img src="img/map.png" alt="" class="link-map__bg">
 									<span>проложить маршрут</span>
@@ -815,6 +840,29 @@
 			</div>
 		</div>
 	</footer>
+
+	<!-- Modal -->
+	<div class="modal fade" id="callbackModal" tabindex="-1" aria-labelledby="callbackModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+			<div class="modal-content">
+				<div class="modal-header">
+					<div class="modal-title">Обратный звонок</div>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<form method="post" class="form">
+						<label>
+							<input type="text" name="name" placeholder="ФИО">
+						</label>
+						<label>
+							<input type="text" name="phone" placeholder="Телефон">
+						</label>
+						<button type="submit" class="btn btn-accent">заказать звонок</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<!-- add plugins js-->
 	<script src="js/jquery.min.js"></script>
